--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ body {
 [tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important; }
 
+i.fa, i.fas, i.far, i.fab {
+    font-size: inherit;
+    color: inherit;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
